SERVER-11297: fix tailable cursor with non-existant collection